--- a/index.html
+++ b/index.html
@@ -8,5 +8,36 @@
 </head>
 <body>
     <h1>hallo</h1>
+    <header>
+        <nav class="mnav ">
+          <div class="logo">
+              <a class="" href="#">WEBDEV <br> <span class="wegw">Wegweiser</span></a>
+          </div>
+          <div class="nav1">  
+            <div class="">
+              <a class="" href="#">FRONTEND</a>
+            </div>
+            <div class="">
+              <a class="" href="#">BACKEND</a>
+            </div>
+            <div class="">
+              <a class="" href="#">FULL STACK</a>
+            </div>
+          </div>
+        </nav>
+      </header>
+      <main>
+          <div class="text">
+          <h1 >DER WEG ZUM WEBENTWICKLER</h1>
+      </div>
+  
+      <button> <a href="http://www.google.com">GET START</a></button>
+      </main>
+  
+      <footer>
+          <a href="#" class="">HOME</a>
+          <a href="#" class="btn">CONTACT</a>
+          <a href="#" class="btn">ABOUT</a>
+      </footer>
 </body>
 </html>
