--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
       <div>
         <a href="#" class="">HOME</a>
         <a href="#" class="">CONTACT</a>
-        <a href="#" class="">ABOUT</a>
+        <a href="https://mohamed-aldabaan.github.io/Portfolio/" target="_blank">ABOUT ME</a>
       </div>
     </footer>
   </body>
