--- a/frontend.html
+++ b/frontend.html
@@ -23,9 +23,9 @@
         </div>
 
         <div class="ma-search">
-          <form action="https://wiki.selfhtml.org/wiki/Spezial%3ASuche" target="_blank">
-            <label for="suche"></label>
-            <input type="search" id="suche" name="search" placeholder="Search" />
+          <form action="https://www.google.com/search" method="get" target="_blank">
+            <label for="search_query"></label>
+            <input type="search" id="search_query" name="q" placeholder="Search" />
             <button name="fulltext" value="1"><i class="fa-solid fa-magnifying-glass"></i></button>
           </form>
         </div>      
