--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     </section>
 
     <footer>
-      <span> &copy 2024 by Webdev Wegweiser</span>
+      <span> &copy 2024 by <a href="https://mohamed-aldabaan.github.io/Portfolio/" target="_blank">Mohamed Al Dabaan</a></span>
       <div>
         <a href="#" class="">HOME</a>
         <a href="#" class="">CONTACT</a>
